user , almost done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>mytestvue</title>
-  </head>
-  <body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ev="http://www.w3.org/2001/xml-events"
+  xmlns:fn="http://www.w3.org/2005/xpath-functions" lang="en-US" xml:lang="en-US">
+
+<head>
+  <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>IBM V-TService - V-TService</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="img/favicon.ico" />
+  <link rel="canonical" href="http://www.ibm.com/" />
+  <meta name="dcterms.date" content="2015-11-30" />
+  <meta name="robots" content="noindex,nofollow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link href="static/CSS/www.css" rel="stylesheet" />
+  <link href="static/CSS/application.css" rel="stylesheet" />
+  <link href="static/CSS/forms.css" rel="stylesheet" />
+  <link href="static/CSS/tables.css" rel="stylesheet" />
+  <link href="static/CSS/social.css" rel="stylesheet" />
+  <link rel="search" type="application/opensearchdescription+xml" href="static/JS/description.xml" title="IBM Search" />
+
+</head>
+
+<body id="ibm-com" class="ibm-type" aria-busy="false">
+  <div id="ibm-top" class="ibm-landing-page">
+    <!-- MASTHEAD_BEGIN -->
+    <div id="ibm-masthead" role="banner" aria-label="IBM">
+      <div id="ibm-mast-options">
+        <ul role="toolbar" aria-labelledby="ibm-masthead">
+          <li id="ibm-geo" role="presentation"><a href="http://www.ibm.com/planetwide/select/selector.html"
+              role="button" aria-label="United States selected - Choose a country">United States</a></li>
+          <li id="ibm-language" role="presentation"><span class="ibm-active" role="button"
+              aria-disabled="true">English</span> <a href="http://www.ibm.com/us/en/" lang="en-US"
+              role="button">English</a></li>
+        </ul>
+      </div>
+      <div id="ibm-universal-nav">
+        <nav role="navigation" aria-label="IBM">
+          <div id="ibm-home"><a href="http://www.ibm.com/us/en/">IBM®</a></div>
+          <ul id="ibm-menu-links" role="toolbar" aria-label="Site map">
+            <li><a href="http://www.ibm.com/sitemap/us/en/">Site map</a></li>
+          </ul>
+        </nav>
+        <div id="ibm-search-module" role="search" aria-labelledby="ibm-masthead">
+          <form id="ibm-search-form" action="http://www.ibm.com/Search/" method="get">
+            <p>
+              <label for="q">IBM</label>
+              <input type="text" maxlength="100" value="" placeholder="Search" name="q" id="q" aria-label="Search" />
+              <input type="hidden" value="18" name="v" />
+              <input type="hidden" value="utf" name="en" />
+              <input type="hidden" value="en" name="lang" />
+              <input type="hidden" value="us" name="cc" />
+              <input type="submit" id="ibm-search" class="ibm-btn-search" value="Submit" />
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- MASTHEAD_END -->
+    
+
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+  </div>
+</body>
+
+<script>
+	digitalData = {
+		page: {
+			pageInfo: {
+				effectiveDate: "2014-11-19",
+				expiryDate: "2015-11-19",
+				language: "en-US",
+				publishDate: "2014-11-19",
+				publisher: "IBM Corporation",
+				version: "v18",
+				ibm: {
+					contentDelivery: "HTML",
+					contentProducer: "v18.1.0 IBM",
+					country: "US",
+					destination: "",
+					industry: "ZZ",
+
+					subject: "",
+					siteID: "www",
+					type: ""
+				}
+			}
+		}
+	};
+</script>
+<script src="static/JS/ida_stats.js"></script>
+<script src="static/JS/www.js"></script>
+<script src="static/JS/dyntabs.js"></script>
+<script src="static/JS/forms.js"></script>
+<script src="static/JS/tables.js"></script>
+<script>
+	IBMCore.common.util.config.set({
+		"masthead": {
+			"type": "alternate",
+		},
+		"footer": {
+			"type": "alternate",
+		},
+	});
+</script>
+<meta xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:iw="http://www.ibm.com/xmlns/prod/iWidget" xmlns="" content=""
+	name="Keywords">
+
 </html>
